Increased allowed memory usage by the tomcat process